Lab 05 "Filter By Age" from the lesson for Functional Programming, a part of Java Advanced course.